feat(synthetics): added test now public endpoint
